--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -5,8 +5,8 @@
   "application.item.applied": "لقد تقدمت لهذه الوظيفة.",
   "application.item.hired": "لقد تم توظيفك",
   "application.item.offered": "الشركة ترغب في توظيفك",
-  "application.item.rejected": "Someone else got the job",
-  "application.item.withdrawn": "The application was withdrawn",
+  "application.item.rejected": "لقد حصل شخص اخر على الوظيفة",
+  "application.item.withdrawn": "تم سحب الطلب",
   "applications.title": "جست أرايفد",
   "apply.for.job.form.message.section": "هل هناك لمور أخرى تريد معرفتها؟",
   "apply.for.job.form.submit.button": "التسجيل",
@@ -18,7 +18,7 @@
   "assignment.details": "تفاصيل الوظيفة",
   "assignment.hours": "ساعات",
   "assignment.rate.gross_salary": "الراتب الإجمالي",
-  "back.to.jobs.section.link": "Find more jobs",
+  "back.to.jobs.section.link": "ابحث عن وظائف اخرى",
   "basic.chat.messages.empty": "لا توجد رسائل حتى الآن",
   "basic.comments.empty": "لا توجد تعليقات حتى الآن",
   "button.form.submit.fail": "توجد بعض الأخطاء، يُرجى مراجعتها أعلاه.",
@@ -44,7 +44,7 @@
   "company.assignments.filter_2": "الأرشيف",
   "component.loading": "جار التحميل...",
   "confirmation.applied.for.job.button": "جِد عدة وظائف",
-  "confirmation.applied.for.job.description": "We're crossing our fingers for you right now. If the employer makes an offer, you have 18 hours to accept the offer. You'll find the job under My Applications. This is where you'll also find all communication that happens between you and the employer.",
+  "confirmation.applied.for.job.description": "نحن ضمن وصلتُ لتوّي ننتظر بشغف  إذا أرسل مستلم الوظيفة عرض عندك 12 ساعة لتوافق على الوظيفة تجد الوظيفة تحت خانة وظائفي حيث توجد كل المكالمات بينك وبين مانح الوظيفة",
   "confirmation.applied.for.job.title": "لقد تقدمت لهذه الوظيفة.",
   "confirmation.contact.button": "العودة الى الاتصال",
   "confirmation.contact.description": "سوف نرد بأقرب وقت ممكن",
@@ -70,18 +70,18 @@
   "error.title": "حدث خطأ!",
   "faq.answer.label": "جواب",
   "faq.title": "أسئلة وأجوبة",
-  "footer.about.us.section.careers": "Careers",
+  "footer.about.us.section.careers": "وظائف",
   "footer.about.us.section.faq": "FAQ",
-  "footer.about.us.section.just.arrived": "About Just Arrived",
-  "footer.about.us.section.press": "Press",
-  "footer.about.us.section.title": "About us",
+  "footer.about.us.section.just.arrived": "عن JustArrived",
+  "footer.about.us.section.press": "اضغط",
+  "footer.about.us.section.title": "عن JustArrived",
   "footer.contact.us.section.title": "اتصال",
-  "footer.follow.us.section.title": "Follow us",
+  "footer.follow.us.section.title": "تابعنا",
   "footer.get.started.section.jobs": "إيجاد وظيفة",
   "footer.get.started.section.login": "تسجيل الدخول",
-  "footer.get.started.section.profile": "Your profile",
+  "footer.get.started.section.profile": "صفحة معلومات شخصية",
   "footer.get.started.section.register": "إنشاء حساب",
-  "footer.get.started.section.title": "Get started",
+  "footer.get.started.section.title": "ابدأ",
   "forbidden.error.description": "عذرا، لا يسمح لك بتنفيذ هذا الإجراء.",
   "forbidden.error.title": "ممنوع",
   "forgot.password.login.link": "سجل الدخول بدلاً عن ذلك",
@@ -107,8 +107,8 @@
   "home.instructions.first.section.instruction1": "فتش على عمل بالقرب منك",
   "home.instructions.first.section.instruction2": "تلقى عرض ",
   "home.instructions.first.section.instruction3": "قبول عرض",
-  "home.instructions.first.section.title": "This is how it works",
-  "home.instructions.second.section.description": "In order to increase your chances getting a job",
+  "home.instructions.first.section.title": "إليك طريقة عمل ذلك:",
+  "home.instructions.second.section.description": "لزيادة فرصك للحصول على الوظيفة",
   "home.instructions.second.section.instruction1": "تقدم إلى جميع الوظائف التي تعجبك",
   "home.instructions.second.section.instruction2": "املأ ملفك الشخصي",
   "home.instructions.second.section.instruction3": "قم بتسجيل الدخول من الحين للآخر والتأكد من ملف التعريف الخاص بك بأنه محدث",
@@ -118,23 +118,23 @@
   "home.jobs.slider.show.all.link": "عرض المزيد",
   "home.jobs.slider.user.jobs.job.applied.label": "مقدم عليه",
   "home.jobs.slider.user.jobs.job.offered.label": "معروض",
-  "home.jobs.slider.user.jobs.job.rejected.label": "Not hired",
-  "home.jobs.slider.user.jobs.job.withdrawn.label": "Withdrawn",
+  "home.jobs.slider.user.jobs.job.rejected.label": "غير موظف",
+  "home.jobs.slider.user.jobs.job.withdrawn.label": "سحب",
   "home.jobs.slider.user.jobs.title": "My Applications",
   "home.jobs.slider.user.jobs.will.perform.label": "تمّ تعيينه",
   "home.partners.description": "Just Arrived عبارة عن مبادرة مجانية مشتركة تم ابتكارها للمساعدة في إلحاق المهاجرين الذين وصلوا مؤخرًا بسوق العمل السويدي. وهذه المبادرة تمتلكها إحدى المؤسسات ويتولى إدارتها اتحاد شركات.",
   "home.partners.title": "شركاؤنا",
   "how.it.works.section.create.accont.button": "إنشاء حساب",
-  "how.it.works.section.find.jobs.description.paragraph.1": "Now it is time to begin job searching!",
-  "how.it.works.section.find.jobs.description.paragraph.2": "Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "how.it.works.section.find.jobs.description.title": "3. Find jobs",
-  "how.it.works.section.jobs.button": "Check out our jobs",
-  "how.it.works.section.register.description.paragraph.1": "Create your account at Just Arrived.",
+  "how.it.works.section.find.jobs.description.paragraph.1": "حان الوقت لتبدأ البحث عن عمل",
+  "how.it.works.section.find.jobs.description.paragraph.2": "قدم على اي عمل وعدد الوظائف التي تشاء!  ولا تنسى تسجيل الدخول كل حين لتتعرف على فرص العمل الجديدة لدينا!",
+  "how.it.works.section.find.jobs.description.title": "3. ابحث عن وظائف",
+  "how.it.works.section.jobs.button": "تعرف على الوظائف لدينا",
+  "how.it.works.section.register.description.paragraph.1": "انشئ حسابك لدى JustArrived",
   "how.it.works.section.register.description.paragraph.2": "The registration form takes one minute to complete and is open for all newcomers and asylum seekers. You will also receive news and updates from Just Arrived after registration.",
-  "how.it.works.section.register.description.title": "1. Create account",
+  "how.it.works.section.register.description.title": "1. انشاء حساب",
   "how.it.works.section.update.profile.description.paragraph.1": "This is the most important thing to increase your chances of getting any job through Just Arrived!",
   "how.it.works.section.update.profile.description.paragraph.2": "Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
-  "how.it.works.section.update.profile.description.title": "2. Update profile",
+  "how.it.works.section.update.profile.description.title": "2. تحديث الملف الشخصي",
   "input.account.number.label": "رقم البطاقة",
   "input.account.number.placeholder": "رقم البطاقة",
   "input.apply.message.label": "رسائل اضافية",
@@ -162,7 +162,17 @@
   "input.email.placeholder": "بريد إلكتروني",
   "input.facebook.url.label": "رابط حسابك على فيسبوك",
   "input.facebook.url.placeholder": "حساب فيسبوك",
+  "input.filter.jobs.label": "Filter on",
+  "input.filter.jobs.option.all": "All jobs",
+  "input.filter.jobs.option.filled": "Filled jobs",
+  "input.filter.jobs.option.open": "Open for applications",
+  "input.filter.jobs.option.unfilled": "Unfilled jobs",
+  "input.filter.jobs.placeholder": "Filter on",
   "input.filter.users.label": "البحث عن طريق",
+  "input.filter.users.option.email": "بريد إلكتروني",
+  "input.filter.users.option.first.name": "First Name",
+  "input.filter.users.option.id": "Id",
+  "input.filter.users.option.last.name": "Last Name",
   "input.filter.users.placeholder": "البحث عن طريق",
   "input.first.name.label": "الاسم الصغير",
   "input.first.name.placeholder": "الاسم الصغير",
@@ -227,7 +237,7 @@
   "input.system.language.description": "هذه هي اللغة التي سوف نستخدمها للتواصل معك",
   "input.system.language.label": "اللغة الافتراضية",
   "input.system.language.placeholder": "اللغة الافتراضية",
-  "input.terms.label": "I accept Just Arrived's terms and conditions.",
+  "input.terms.label": "اقبل بشروط و قوانين JustArrived",
   "input.work.permit.back.description": "تحميل الصورة الخلفية لتصريح العمل",
   "input.work.permit.back.header": "رخصة عمل",
   "input.work.permit.back.label": "تصريح العمل (صورة خلفية)",
@@ -239,7 +249,7 @@
   "job.actions.header.applied": "قدّمت على الوظيفة",
   "job.actions.header.apply": "قدّم على الوظيفة",
   "job.actions.header.confirm": "قبول عرض",
-  "job.actions.header.hired": "تمّ تعيينه",
+  "job.actions.header.hired": "You have been employed",
   "job.actions.header.login": "تسجيل الدخول للتقدم للوظيفة",
   "job.actions.header.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.header.performed": "تم أداء الوظيفة",
@@ -248,36 +258,43 @@
   "job.actions.section.apply": "التسجيل",
   "job.actions.section.closed.for.applications": "Closed for applications",
   "job.actions.section.confirm": "قبول عرض",
-  "job.actions.section.hired": "تمّ تعيينه",
+  "job.actions.section.hired": "You have been employed",
   "job.actions.section.login": "تسجيل الدخول للتقدم للوظيفة",
   "job.actions.section.offer": "لقد تلقيت عرضا للقيام بهذه الوظيفة. أجب خلال {{hours}} ساعات و {{minutes}} دقيقة.",
   "job.actions.section.performed": "تم أداء الوظيفة",
-  "job.actions.section.read.more": "Read more about",
+  "job.actions.section.read.more": "اقرأ المزيد عن",
   "job.actions.section.register": "إنشاء حساب",
   "job.actions.section.rejected": "Unfortunately, someone else got the job",
-  "job.actions.section.withdrawn": "Your application has been withdrawn",
+  "job.actions.section.withdrawn": "تم سحب طلبك",
   "job.additional.user.info.modal.button": "أكمل",
   "job.additional.user.info.modal.title": "لزيادة فرصتك للحصول على هذه الوظيفة يرجى النظر في توفير المعلومات التالية",
-  "job.applicant.section.title": "You are",
+  "job.applicant.section.title": "انت ",
+  "job.card.applied": "قدّمت على الوظيفة",
+  "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}} / الساعة\n",
-  "job.card.full.time": "Full time",
+  "job.card.filled": "Job filled",
+  "job.card.full.time": "دوام كامل",
+  "job.card.hired": "You have been employed",
   "job.card.hours": "{{hours}} الساعات",
-  "job.card.part.time": "Part time",
-  "job.card.read.more": "Read more",
-  "job.card.temporary": "Temporary",
-  "job.card.until.further.notice": "Indefinite duration",
+  "job.card.offered": "Job offered to you",
+  "job.card.part.time": "دوام جزئي",
+  "job.card.read.more": "إقرأ المزيد",
+  "job.card.rejected": "لقد حصل شخص اخر على الوظيفة",
+  "job.card.temporary": "مؤقت",
+  "job.card.until.further.notice": "مدة غير محددة",
+  "job.card.withdrawn": "تم سحب طلبك",
   "job.comments.section.title": "تعليق",
-  "job.company.description.section.title": "Short about {{company}}",
+  "job.company.description.section.title": "نبذة عن {{company}}",
   "job.description.section.header": "وصف",
-  "job.description.section.title": "About the job",
+  "job.description.section.title": "عن الوظيفة",
   "job.important.information.section.address.title": "العنوان",
-  "job.important.information.section.employer.title": "Employer",
+  "job.important.information.section.employer.title": "صاحب العمل",
   "job.important.information.section.hours": "{{hours}} الساعات",
-  "job.important.information.section.last.application.date.title": "Last day of application",
-  "job.important.information.section.period.title": "Period",
+  "job.important.information.section.last.application.date.title": "اخر يوم لتقديم الطلب",
+  "job.important.information.section.period.title": "مدة",
   "job.important.information.section.salary.per.hour": "{{grossSalaryPerHour}} gross salary",
-  "job.important.information.section.salary.title": "Salary",
-  "job.important.information.section.title": "Important information",
+  "job.important.information.section.salary.title": "المرتب",
+  "job.important.information.section.title": "معلومات هامة",
   "job.important.information.section.total.salary": "{{totalGrossSalary}} total salary ({{totalNetSalary}} after tax)",
   "job.information.section.header": "معلومات",
   "job.location.section.header": "الموقع",
@@ -288,9 +305,9 @@
   "job.scope.section.hours": "{{hours}} الساعات",
   "job.scope.section.netSalary": "{{netSalary}} صافي الراتب (بعد الضريبة)",
   "job.scope.section.until.further.notice": "حتى اشعار آخر",
-  "job.short.description.section.title": "Short about the job",
-  "job.tasks.section.title": "Tasks",
-  "jobs.title": "كل الوظائف ({{nbrOfJobs}})",
+  "job.short.description.section.title": "نبذة عن العمل",
+  "job.tasks.section.title": "المسؤوليات",
+  "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "معرفة أساسية ",
   "language.proficiency.beginner": "مبتدئ",
   "language.proficiency.expert": "اللغة الأم ",
@@ -314,6 +331,7 @@
   "map.geolocation.error.timeout": "service timeout has been reached",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "اذهب للوظيفة",
+  "menu.language.image.title": "اللغة",
   "menu.language.text_1": "يمكنك العودة الى الوراء وتغيير اللغة في وقت لاحق إذا أردت",
   "menu.language.text_2": "وظائف، تعليقات ورسائل تُترجم تلقائيا",
   "menu.language.title": "اِختار لغة",
@@ -330,12 +348,12 @@
   "menu.main.register": "إنشاء حساب",
   "menu.main.staffing_time_report": "تقرير الوقت",
   "menu.main.support.chat": "تحدث مع Just Arrived",
-  "meta.404.description": "The page or resource you are looking for can not be found",
-  "meta.404.title": "Not found",
+  "meta.404.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
+  "meta.404.title": "صفحة غير موجودة",
   "meta.applications.description": "Here you can see your job applications and their current status",
   "meta.applications.title": "Your applications",
   "meta.contact.description": "If you have any questions or feedback feel free to contact you and we will be in touch as soon as we can.",
-  "meta.contact.title": "Contact us",
+  "meta.contact.title": "اتصل بنا",
   "meta.cookies.about.description": "نستخدم كعكات لأسباب تقنية ولتسهيل استعمال خدماتنا ولإعطاءك كمستخدم معلومات جديرة عند زيارتك لموقعنا تستخدم الكعكات أيضا لقياس عدد زيارات موقعنا ولجمع الإحصائيات وتحسين خدماتنا الاستعانة بخدماتنا يعني الموافقة منك ان نستعمل الكعكات، هذا إذا لم يتم تعطيلها عن طريق تغيير الإعدادات للكعكات في متصفح الشبكة لديك",
   "meta.cookies.about.title": "كعكات",
   "meta.error.description": "معذرة، حدث خطأ... لكن لا تقلق، نحن نقوم بإصلاحه!",
@@ -355,17 +373,17 @@
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
   "meta.jobs.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
   "meta.login.description": "Login now and apply to our jobs!",
-  "meta.login.title": "Login",
-  "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
+  "meta.login.title": "تسجيل دخول ",
+  "meta.lost.connection.description": "عذرا، يبدو أنك فقدت الاتصال بالخادم. ربما اتصال الإنترنت الخاص بك مقطوع أو الخادم غير متصل.",
   "meta.lost.connection.title": "فقد الإتصال",
   "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
   "meta.register.title": "تسجيل جديد",
   "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
-  "meta.reset.password.title": "Change your password",
+  "meta.reset.password.title": "تغيير كلمة المرور",
   "meta.support.chat.description": "If you have any questions or feedback feel free to chat with us and we will be in touch as soon as we can.",
-  "meta.support.chat.title": "Chat with us",
+  "meta.support.chat.title": "تحدث مع Just Arrived",
   "meta.user.profile.description": "This is the most important thing to increase your chances of getting any job through Just Arrived! Make sure to fill in every relevant piece of information and all your skills. If your profile is empty you won’t be matched with any jobs.",
-  "meta.user.profile.title": "Your profile",
+  "meta.user.profile.title": "صفحة معلومات شخصية",
   "missing.payment.information.modal.button": "أكمل",
   "missing.payment.information.modal.title": "In order to get payed you need to provide the following missing information",
   "page.not.found.error.description": "عذرا، الصفحة أو المورد الذي تبحث عنه غير موجود.",
@@ -402,6 +420,12 @@
   "skill.proficiency.expert": "خبير ",
   "skill.proficiency.intermediate": "معرفة متوسطة ",
   "skill.proficiency.professional": "محترف ",
+  "sort.users.input.option.first.name.reverse": "First Name (Z-A)",
+  "sort.users.input.option.first.name": "First Name (A-Z)",
+  "sort.users.input.option.last.name.reverse": "Last Name (Z-A)",
+  "sort.users.input.option.last.name": "Last Name (A-Z)",
+  "sort.users.input.option.newest": "Newest",
+  "sort.users.input.option.oldest": "Oldest",
   "support.chat.info.message.description": "يرجى العلم بأنه قد يستغرق الأمر ما يصل إلى 72 ساعة للحصول على رد",
   "support.chat.info.message.header": "هذه ليست خدمة الدردشة الفورية",
   "support.chat.page.title": "تحدث مع Just Arrived",
@@ -455,7 +479,7 @@
   "user.update.form.submit.button": "حفظ تغييرات ملف التعريف",
   "users.filter.search.label": "البحث عن المستخدمين",
   "users.filter.search.placeholder": "البحث عن المستخدمين ",
-  "validations.email": "must be a valid email address",
+  "validations.email": "يجب أن يكون عنوان بريد الكتروني صحيح",
   "validations.maxlength": "طويل جدا (الحد الأقصى {{maxLength}} من الأحرف)",
   "validations.minlength": "قصير جدا (الحد الأدنى {{minLength}} من الأحرف)",
   "validations.pattern": "لا يتوافق مع النمط المطلوب",
