--- a/src/assets/i18n/fa.json
+++ b/src/assets/i18n/fa.json
@@ -162,7 +162,17 @@
   "input.email.placeholder": "ایمیل",
   "input.facebook.url.label": "Link to your facebook profile",
   "input.facebook.url.placeholder": "Facebook profile",
+  "input.filter.jobs.label": "Filter on",
+  "input.filter.jobs.option.all": "All jobs",
+  "input.filter.jobs.option.filled": "Filled jobs",
+  "input.filter.jobs.option.open": "Open for applications",
+  "input.filter.jobs.option.unfilled": "Unfilled jobs",
+  "input.filter.jobs.placeholder": "Filter on",
   "input.filter.users.label": "Search by",
+  "input.filter.users.option.email": "ایمیل",
+  "input.filter.users.option.first.name": "First Name",
+  "input.filter.users.option.id": "Id",
+  "input.filter.users.option.last.name": "Last Name",
   "input.filter.users.placeholder": "Search by",
   "input.first.name.label": "نام",
   "input.first.name.placeholder": "نام",
@@ -239,7 +249,7 @@
   "job.actions.header.applied": "شما برای این ماموریت کاری درخواست ارسال نموده‌اید",
   "job.actions.header.apply": "برای این ماموریت کاری درخواست نمایید",
   "job.actions.header.confirm": "Accept offer",
-  "job.actions.header.hired": "بکار گرفته شده ",
+  "job.actions.header.hired": "You have been employed",
   "job.actions.header.login": "Log in to apply",
   "job.actions.header.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
   "job.actions.header.performed": "Job performed",
@@ -248,7 +258,7 @@
   "job.actions.section.apply": "Apply",
   "job.actions.section.closed.for.applications": "Closed for applications",
   "job.actions.section.confirm": "Accept offer",
-  "job.actions.section.hired": "بکار گرفته شده ",
+  "job.actions.section.hired": "You have been employed",
   "job.actions.section.login": "Log in to apply",
   "job.actions.section.offer": "You have received an offer to do this job. Answer within {{hours}} hours and {{minutes}} minutes.",
   "job.actions.section.performed": "Job performed",
@@ -259,13 +269,20 @@
   "job.additional.user.info.modal.button": "ادامه دهید",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
+  "job.card.applied": "شما برای این ماموریت کاری درخواست ارسال نموده‌اید",
+  "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}}/hour",
+  "job.card.filled": "Job filled",
   "job.card.full.time": "Full time",
+  "job.card.hired": "You have been employed",
   "job.card.hours": "{{hours}} hours",
+  "job.card.offered": "Job offered to you",
   "job.card.part.time": "Part time",
   "job.card.read.more": "Read more",
+  "job.card.rejected": "Someone else got the job",
   "job.card.temporary": "Temporary",
   "job.card.until.further.notice": "Indefinite duration",
+  "job.card.withdrawn": "Your application has been withdrawn",
   "job.comments.section.title": "نظرات",
   "job.company.description.section.title": "Short about {{company}}",
   "job.description.section.header": "شرح",
@@ -290,7 +307,7 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
-  "jobs.title": "All jobs ({{nbrOfJobs}})",
+  "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
   "language.proficiency.expert": "Native speaker",
@@ -314,6 +331,7 @@
   "map.geolocation.error.timeout": "service timeout has been reached",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "Go to job",
+  "menu.language.image.title": "زبان",
   "menu.language.text_1": "شما در صورت تمایل می توانید به صفحه اصلی برگشته و زبان را تغییر دهید.",
   "menu.language.text_2": "ماموریت، نظرات و پیام‌ها بطور اتوماتیک ترجمه می‌شود",
   "menu.language.title": "زبان انتخاب کنید",
@@ -402,6 +420,12 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Intermediate knowledge",
   "skill.proficiency.professional": "Professional",
+  "sort.users.input.option.first.name.reverse": "First Name (Z-A)",
+  "sort.users.input.option.first.name": "First Name (A-Z)",
+  "sort.users.input.option.last.name.reverse": "Last Name (Z-A)",
+  "sort.users.input.option.last.name": "Last Name (A-Z)",
+  "sort.users.input.option.newest": "Newest",
+  "sort.users.input.option.oldest": "Oldest",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
