--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -162,7 +162,17 @@
   "input.email.placeholder": "E-post",
   "input.facebook.url.label": "Länk till din facebook profil",
   "input.facebook.url.placeholder": "Facebook profil",
+  "input.filter.jobs.label": "Filtrera på",
+  "input.filter.jobs.option.all": "Alla jobb",
+  "input.filter.jobs.option.filled": "Tillsatta jobb",
+  "input.filter.jobs.option.open": "Öppna för ansökningar",
+  "input.filter.jobs.option.unfilled": "Ej tillsatta jobb",
+  "input.filter.jobs.placeholder": "Filtrera på",
   "input.filter.users.label": "Sök",
+  "input.filter.users.option.email": "E-post",
+  "input.filter.users.option.first.name": "Förnamn",
+  "input.filter.users.option.id": "Id",
+  "input.filter.users.option.last.name": "Efternamn",
   "input.filter.users.placeholder": "Sök",
   "input.first.name.label": "Förnamn",
   "input.first.name.placeholder": "Förnamn",
@@ -239,7 +249,7 @@
   "job.actions.header.applied": "Du har sökt jobbet",
   "job.actions.header.apply": "Sök jobbet",
   "job.actions.header.confirm": "Tacka ja",
-  "job.actions.header.hired": "Anlitad",
+  "job.actions.header.hired": "Du har blivit anställd",
   "job.actions.header.login": "Logga in för att söka",
   "job.actions.header.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
   "job.actions.header.performed": "Jobb utfört",
@@ -248,7 +258,7 @@
   "job.actions.section.apply": "Ansök",
   "job.actions.section.closed.for.applications": "Stängd för ansökningar",
   "job.actions.section.confirm": "Tacka ja",
-  "job.actions.section.hired": "Anlitad",
+  "job.actions.section.hired": "Du har blivit anställd",
   "job.actions.section.login": "Logga in för att söka",
   "job.actions.section.offer": "Du har fått erbjudande om att utföra jobbet. Svara inom {{hours}} timmar och {{minutes}} minuter.",
   "job.actions.section.performed": "Jobb utfört",
@@ -259,13 +269,20 @@
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
   "job.applicant.section.title": "Du är",
+  "job.card.applied": "Du har sökt jobbet",
+  "job.card.closed.for.applications": "Avbrutet",
   "job.card.currency.per.hour": "{{currency}}/timmen",
+  "job.card.filled": "Jobb tillsatt",
   "job.card.full.time": "Heltid",
+  "job.card.hired": "Du har blivit anställd",
   "job.card.hours": "{{hours}} timmar",
+  "job.card.offered": "Jobberbjudande",
   "job.card.part.time": "Deltid",
   "job.card.read.more": "Läs mer",
+  "job.card.rejected": "Någon annan fick jobbet",
   "job.card.temporary": "Tillfälligt",
   "job.card.until.further.notice": "Tillsvidare",
+  "job.card.withdrawn": "Din ansökan har återkallats",
   "job.comments.section.title": "Kommentarer",
   "job.company.description.section.title": "Kort om {{company}}",
   "job.description.section.header": "Beskrivning",
@@ -290,7 +307,7 @@
   "job.scope.section.until.further.notice": "Tillsvidare",
   "job.short.description.section.title": "Kort om jobbet",
   "job.tasks.section.title": "Uppgifter",
-  "jobs.title": "Alla jobb ({{nbrOfJobs}})",
+  "jobs.title": "Antal jobb ({{nbrOfJobs}})",
   "language.proficiency.basic": "Grundläggande kunskaper",
   "language.proficiency.beginner": "Nybörjare",
   "language.proficiency.expert": "Flytande",
@@ -314,6 +331,7 @@
   "map.geolocation.error.timeout": "det tog för lång tid att avgöra din position",
   "map.geolocation.error.unsupportedBrowser": "din webbläsare stödjer in positionering",
   "map.marker.info.button": "Gå till jobb",
+  "menu.language.image.title": "språk",
   "menu.language.text_1": "Du kan gå tillbaka och ändra språk senare om du vill.",
   "menu.language.text_2": "Jobb, kommentarer och meddelanden översätts automatiskt.",
   "menu.language.title": "Välj språk",
@@ -402,6 +420,12 @@
   "skill.proficiency.expert": "Expert",
   "skill.proficiency.intermediate": "Medelkunskap",
   "skill.proficiency.professional": "Professionell",
+  "sort.users.input.option.first.name.reverse": "Förnamn (Z-A)",
+  "sort.users.input.option.first.name": "Förnamn (A-Z)",
+  "sort.users.input.option.last.name.reverse": "Efternamn (Z-A)",
+  "sort.users.input.option.last.name": "Efternamn (A-Z)",
+  "sort.users.input.option.newest": "Nyast",
+  "sort.users.input.option.oldest": "Äldst",
   "support.chat.info.message.description": "Tänk på att det kan ta upp till 72 timmar att få svar",
   "support.chat.info.message.header": "Det här är inte en direktchat",
   "support.chat.page.title": "Chatta med Just Arrived",
