Show preview message if on a preview job page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -259,6 +259,7 @@
   "job.additional.user.info.modal.button": "Continue",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
+  "job.banner.preview": "This is a preview",
   "job.card.currency.per.hour": "{{currency}}/hour",
   "job.card.full.time": "Full time",
   "job.card.hours": "{{hours}} hours",
@@ -314,10 +315,10 @@
   "map.geolocation.error.timeout": "service timeout has been reached",
   "map.geolocation.error.unsupportedBrowser": "your browser does not support location services",
   "map.marker.info.button": "Go to job",
+  "menu.language.image.title": "Language",
   "menu.language.text_1": "You can go back and change your selected language later if you like.",
   "menu.language.text_2": "Jobs, comments and messages are translated automatically.",
   "menu.language.title": "Select language",
-  "menu.language.image.title": "Language",
   "menu.language.translation_by_probono": "Translation made probono by",
   "menu.main.contact": "Contact",
   "menu.main.faq": "Questions and Answers",
