--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -98,10 +98,10 @@
   "home.header.logged.in.jobs.button": "إيجاد وظيفة",
   "home.header.logged.in.profile.button": "تحرير ملف التعريف",
   "home.header.logged.in.title": "مرحبًا {{username}}!",
-  "home.header.logged.out.description": "جست أرايفد تساعدك في الدخول إلى سوق العمل السويدي من خلال إعطائك علاقات مع شركات سويدية. حاليا نحن نقدم وظائف في ستوكهولم, يوتوبوري و مالمو. قم بإنشاء حساب للبدئ معنا ",
+  "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labour market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "home.header.logged.out.login.button": "تسجيل الدخول",
   "home.header.logged.out.register.button": "إنشاء حساب",
-  "home.header.logged.out.sub.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
+  "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labour market",
   "home.header.logged.out.title": "مرحبًا!",
   "home.instructions.first.section.instruction0": "سجل دخولك او قم بتسجيل حساب جديد",
   "home.instructions.first.section.instruction1": "فتش على عمل بالقرب منك",
@@ -269,6 +269,7 @@
   "job.additional.user.info.modal.button": "أكمل",
   "job.additional.user.info.modal.title": "لزيادة فرصتك للحصول على هذه الوظيفة يرجى النظر في توفير المعلومات التالية",
   "job.applicant.section.title": "انت ",
+  "job.banner.preview": "This is a preview",
   "job.card.applied": "قدّمت على الوظيفة",
   "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}} / الساعة\n",
@@ -367,16 +368,16 @@
   "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
   "meta.god.mode.title": "وضع السوبر",
   "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
-  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
-  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labour market",
+  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labour market.",
   "meta.job.title": "Apply now",
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "meta.jobs.title": "أحصل على الخبرة التي تريد لكي تدخل سوق العمل السويدية ",
+  "meta.jobs.title": "Get the experience you need to enter the Swedish labour market",
   "meta.login.description": "Login now and apply to our jobs!",
   "meta.login.title": "تسجيل دخول ",
   "meta.lost.connection.description": "عذرا، يبدو أنك فقدت الاتصال بالخادم. ربما اتصال الإنترنت الخاص بك مقطوع أو الخادم غير متصل.",
   "meta.lost.connection.title": "فقد الإتصال",
-  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labour market.",
   "meta.register.title": "تسجيل جديد",
   "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
   "meta.reset.password.title": "تغيير كلمة المرور",
