--- a/src/assets/i18n/ps.json
+++ b/src/assets/i18n/ps.json
@@ -98,10 +98,10 @@
   "home.header.logged.in.jobs.button": "د ګومارنې موندل",
   "home.header.logged.in.profile.button": "Edit profile",
   "home.header.logged.in.title": "Welcome {{username}}!",
-  "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labor market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
+  "home.header.logged.out.description": "Just Arrived helps you get the credentials you need to enter the Swedish labour market by matching you with Swedish companies. Right now Just Arrived mediates jobs in Stockholm, Gothenburg and Malmö. Create an account to get started!",
   "home.header.logged.out.login.button": "ننوتل",
   "home.header.logged.out.register.button": "د حساب رامینځته کول",
-  "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labor market",
+  "home.header.logged.out.sub.title": "Get the experience you need to enter the Swedish labour market",
   "home.header.logged.out.title": "Welcome!",
   "home.instructions.first.section.instruction0": "Log in or create an account",
   "home.instructions.first.section.instruction1": "Apply for jobs near you",
@@ -269,6 +269,7 @@
   "job.additional.user.info.modal.button": "ادامه",
   "job.additional.user.info.modal.title": "To maximize your chances to get this job please consider providing the following information",
   "job.applicant.section.title": "You are",
+  "job.banner.preview": "This is a preview",
   "job.card.applied": "تاسې د ګومارنې لپاره غوښتنه کړې",
   "job.card.closed.for.applications": "Closed",
   "job.card.currency.per.hour": "{{currency}}/hour",
@@ -367,16 +368,16 @@
   "meta.god.mode.description": "As an admin you have access to the whole system and can act on users behalf.",
   "meta.god.mode.title": "God mode",
   "meta.home.description": "We connect newly-arrived immigrants with Swedish companies. Our digital platform enables companies to post simple tasks and services and match them with newcomers looking for work.",
-  "meta.home.title": "We give newcomers in Sweden a chance to enter the labor market",
-  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.home.title": "We give newcomers in Sweden a chance to enter the labour market",
+  "meta.job.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labour market.",
   "meta.job.title": "Apply now",
   "meta.jobs.description": "Now is the time to begin job searching! Apply for any and as many jobs you want! Don’t forget to sign in often to see if we have posted any new jobs!",
-  "meta.jobs.title": "Get the experience you need to enter the Swedish labor market",
+  "meta.jobs.title": "Get the experience you need to enter the Swedish labour market",
   "meta.login.description": "Login now and apply to our jobs!",
   "meta.login.title": "Login",
   "meta.lost.connection.description": "Sorry, but it seems that you lost the connection to the server. Maybe your internet connection is down or the server may be offline.",
   "meta.lost.connection.title": "Lost connection",
-  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labor market.",
+  "meta.register.description": "By matching you with Swedish companies Just Arrived helps you get the credentials you need to enter the Swedish labour market.",
   "meta.register.title": "Register",
   "meta.reset.password.description": "If you have lost or forgot your password it is easy to change it and get access to your account back.",
   "meta.reset.password.title": "Change your password",
