--- a/src/assets/i18n/sv.json
+++ b/src/assets/i18n/sv.json
@@ -269,6 +269,7 @@
   "job.additional.user.info.modal.button": "Fortsätt",
   "job.additional.user.info.modal.title": "\nFör att maximera dina chanser att få jobbet bör du överväga att ge följande information",
   "job.applicant.section.title": "Du är",
+  "job.banner.preview": "Detta är en förhandsvisning",
   "job.card.applied": "Du har sökt jobbet",
   "job.card.closed.for.applications": "Avbrutet",
   "job.card.currency.per.hour": "{{currency}}/timmen",
