Show message when no job/application exists

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "application.item.offered": "The company wants to hire you",
   "application.item.rejected": "Someone else got the job",
   "application.item.withdrawn": "The application was withdrawn",
+  "applications.pager.section.no.applications": "No applications yet",
   "applications.title": "Just Arrived",
   "apply.for.job.form.message.section": "Anything else you want us to know?",
   "apply.for.job.form.submit.button": "Apply",
@@ -308,6 +309,7 @@
   "job.scope.section.until.further.notice": "Until further notice",
   "job.short.description.section.title": "Short about the job",
   "job.tasks.section.title": "Tasks",
+  "jobs.pager.section.no.jobs": "No jobs found",
   "jobs.title": "Number of jobs ({{nbrOfJobs}})",
   "language.proficiency.basic": "Basic knowledge",
   "language.proficiency.beginner": "Beginner",
