--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,6 +1,4 @@
 {
-  "stepper.modal.previous.button": "Previous",
-  "stepper.modal.next.button": "Next",
   "already.registered.modal.button": "Log in",
   "already.registered.modal.info": "It seems that there already is an account using {{emailOrPhone}}, so we suggest that you log in instead. If you forgot your password you can reset your password by clicking \"Forgotten your password?\" above",
   "already.registered.modal.title": "{{emailOrPhone}} is already registered",
@@ -431,12 +429,23 @@
   "sort.users.input.option.last.name": "Last Name (A-Z)",
   "sort.users.input.option.newest": "Newest",
   "sort.users.input.option.oldest": "Oldest",
+  "stepper.modal.next.button": "Next",
+  "stepper.modal.previous.button": "Previous",
   "support.chat.info.message.description": "Please be aware that it may take up to 72 hours to get a response",
   "support.chat.info.message.header": "This is not an instant chat service",
   "support.chat.page.title": "Chat with Just Arrived",
   "support.chat.title": "Just Arrived",
   "terms.frilans_finans.accept": "I accept Frilans Finans",
   "terms": "terms, conditions and employment contract",
+  "update-profile-step-1-modal-header": "Choose your skills",
+  "update-profile-step-2-modal-header": "Upload your resume",
+  "update-profile-step-3-modal-description": "Upload a profile picture",
+  "update-profile-step-3-modal-header": "Upload a profile picture",
+  "update-profile-step-4-modal-description": "You have successfully increased your chances to get a job!",
+  "update-profile-step-4-modal-find-jobs-button": "Find a job",
+  "update-profile-step-4-modal-header": "Thank you",
+  "update-profile-step-4-modal-profile-button": "Your profile",
+  "update-profile-step-4-modal-sub-description": "Under your profile you can provide additional information that we are insterested in.",
   "user.card.no.address": "No address",
   "user.missing.traits.form.close.button": "Close",
   "user.missing.traits.form.information.provided.message.description": "You have successfully increased your chances to get jobs.",
